(INST-1a) MacOS Build Testing